@@ -43,7 +43,7 @@ AT_CHECK(cmp testfile modified1, [0], [ignore], [ignore])
 AT_CHECK(cmp file.ignore orig.ignore, [0], [ignore], [ignore])
 
 # now run it again with two paths, one in the ignorehook list, the other normal
-AT_CHECK(MONOTONE revert, [], [ignore], [ignore])
+AT_CHECK(MONOTONE revert ., [], [ignore], [ignore])
 AT_CHECK(cp modified1 testfile)
 AT_CHECK(cp modified2 file.ignore)
 AT_CHECK(cp modified3 file2)
@@ -62,7 +62,7 @@ AT_CHECK(cp modified1 testfile)
 AT_CHECK(cp modified2 file.ignore)
 AT_CHECK(rm file2)
 
-AT_CHECK(MONOTONE --rcfile=ignore_hook.lua revert --missing --debug, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --rcfile=ignore_hook.lua revert . --missing --debug, [], [ignore], [ignore])
 
 AT_CHECK(cmp testfile modified1, [0], [ignore], [ignore])
 AT_CHECK(cmp file.ignore modified2, [0], [ignore], [ignore])
@@ -76,7 +76,7 @@ AT_CHECK(cp modified1 testfile)
 AT_CHECK(cp orig.ignore file.ignore)
 AT_CHECK(cp orig2 file2)
 
-AT_CHECK(MONOTONE --rcfile=ignore_hook.lua revert --missing --debug, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --rcfile=ignore_hook.lua revert . --missing --debug, [], [ignore], [ignore])
 
 AT_CHECK(cmp testfile modified1, [0], [ignore], [ignore])
 AT_CHECK(cmp file.ignore orig.ignore, [0], [ignore], [ignore])
