@@ -1,3 +1,8 @@
+2005-12-26  Matt Johnston  <matt@ucc.asn.au>
+
+	* commands.cc (CMD(revert)): revert with no args prints usage,
+	mention "." for entire working copy.
+
 2005-12-21  Matt Johnston  <matt@ucc.asn.au>
 
 	* commands.cc (dump_difs, CMD(log)): only print --diffs for the file
